# ardite

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
docs/01-design/: 02-pointers.md  04-immutability.md  05-reducing.md  06-views.md
docs/design/: 02-pointers.md  03-types.md  05-reducing.md  06-views.md  overview.md  patch-chain.md  patch.md  structure.md
src/: lib.rs
